# DCSim

./: .gitignore  CLAUDE.md  README.md  demo_plan.md  pyproject.toml
.claude/: settings.local.json
demo/: example_chaos.json  pitch_script.md
runbooks/: add-chaos-event.md  add-failure-distribution.md  add-hardware-type.md  add-perf-profile.md  add-topology.md  add-visualization.md  add-workload.md
src/dcsim/: __init__.py  __main__.py  demo.py  visualize.py
src/dcsim/chaos/: __init__.py  injector.py
src/dcsim/engine/: __init__.py  clock.py  event.py  loop.py
src/dcsim/hardware/: __init__.py  components.py  graph.py  topology.py
src/dcsim/observer/: __init__.py  logger.py
src/dcsim/workloads/: allreduce.py  base.py
tests/: conftest.py  test_chaos.py  test_engine.py  test_hardware.py  test_integration.py  test_observer.py  test_workloads.py
web/: build_wheel.sh  index.html  vercel.json
