[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcsim"
version = "0.1.0"
description = "Datacenter Chaos Engineering Simulator"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.2",
    "plotly>=5.18",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dcsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
